新增广告显示插件

--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -12,7 +12,8 @@
     <!-- 主体 -->
     <div id="indexMain" class="index-main">
        <!-- 插件块 -->
-       <div class="container-span">{:hook('AdminIndex')}</div>
+       <div class="container-span">{:hook('AdminIndex')}{:hook('Advs', '4')}</div>
+
     </div>
 </block>
 
