--- a/Application/Home/View/yunzhi/Public/footer.html
+++ b/Application/Home/View/yunzhi/Public/footer.html
@@ -1,2 +1,12 @@
 <block name="footer">
+	<div class="row"><!--footer-->
+        <div class="col-md-12 bg-foot">
+            <div class="footer">
+                <font style="font-family:Arail">Copyright © Hebei University of Technology </font>
+                ,河北工业大学<br/>
+                地址:天津市北辰区西平道 5340 号, 邮编:300401 津ICP备05003053号 津教备0020号<br/>
+                版权所有 生态环境重点实验室
+            </div>
+        </div>
+    </div>
 </block> 
