--- a/Application/Home/View/yunzhi/Public/logo.html
+++ b/Application/Home/View/yunzhi/Public/logo.html
@@ -1,2 +1,7 @@
 <block name="logo">
+	<div class="row"><!--标题-->
+        <div class="col-md-12">
+            <img  src="images/logo11.jpg" class="img-responsive" alt="Responsive image"/>
+        </div>
+    </div>
 </block>
