--- a/Application/Home/View/yunzhi/Public/sliderShow.html
+++ b/Application/Home/View/yunzhi/Public/sliderShow.html
@@ -1,2 +1,53 @@
 <block name="sliderShow">
+	<div class="row"><!--幻灯片-->
+	    <div class="col-md-12">
+	        <div class="carousel slide" id="carousel-819885">
+	            <ol class="carousel-indicators">
+	                    <li class="active" data-slide-to="0" data-target="#carousel-819885">
+	                    </li>
+	                    <li data-slide-to="1" data-target="#carousel-819885">
+	                    </li>
+	                    <li data-slide-to="2" data-target="#carousel-819885">
+	                    </li>
+	            </ol>
+	            <div class="carousel-inner">
+	                <div class="item  active">
+	                    <img alt="Carousel Bootstrap First" src="images/11.jpg" class="img-responsive" />
+	                    <div class="carousel-caption">
+	                        <h4 class="text-primary">
+	                            国家973计划项目启动工作会议
+	                        </h4>
+	                        <p>
+
+	                        </p>
+	                    </div>
+	                </div>
+	                <div class="item">
+	                    <img alt="Carousel Bootstrap Second" src="images/s-22.jpg" />
+	                    <div class="carousel-caption">
+	                        <h4 class="text-primary">
+	                            无机材料的光学活性研究新进展
+	                        </h4>
+	                        <p>
+
+	                        </p>
+	                    </div>
+	                </div>
+	                <div class="item">
+	                    <img alt="Carousel Bootstrap Third" src="images/33.jpg" />
+	                    <div class="carousel-caption">
+	                        <h4 class="text-primary">
+	                            Two populations of BPs, one functionlized with β-cyclodextrin (CD-BPs) and the other with azobenzene (Azo-BPs), were prepared through a coassembly method.
+	                        </h4>
+	                        <p>
+
+	                        </p>
+	                    </div>
+	                </div>
+	            </div>
+	             <a class="left carousel-control" href="#carousel-819885" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> 
+	             <a class="right carousel-control" href="#carousel-819885" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+	        </div>
+	    </div>
+	</div>
 </block>
