整个框架搭建完毕

--- a/Application/Home/View/yunzhi/Index/index.html
+++ b/Application/Home/View/yunzhi/Index/index.html
@@ -1,1 +1,8 @@
 <extend name="Base/common"/>
+<block name="sliderShow">
+<div class="row">
+	<div class="col-md-12">
+		这里是sliderShow的内容
+	</div>
+</div>
+</block>
