--- a/Application/Home/View/yunzhi/Public/head.html
+++ b/Application/Home/View/yunzhi/Public/head.html
@@ -1,5 +1,5 @@
 <block name="head">
-	<block name="title"><title></title></block>
+	<block name="title"><title>生态环境重点实验室</title></block>
 	<!-- 新 Bootstrap 核心 CSS 文件 -->
 	<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
