--- a/Application/Home/View/yunzhi/Public/main.html
+++ b/Application/Home/View/yunzhi/Public/main.html
@@ -1,5 +1,5 @@
 <block name="main">
 <div class="row">
-	<div class="col-md-12">hello</div>
+	<div class="col-md-12">这里是main内容，请进行重写</div>
 </div>
 </block>
