--- a/Application/Home/View/yunzhi/Category/lists.html
+++ b/Application/Home/View/yunzhi/Category/lists.html
@@ -38,7 +38,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="thumbnail">
-                                            <a  href="#"><img alt="" src="images/wxh.jpg" width="160" height="200"></a>
+                                            <a  href="#"><img alt="" src="__IMG__/wxh.jpg" width="160" height="200"></a>
                                             <div class="caption">
                                                 <a href="#" class="btn" type="button"><h4>2015级硕士&nbsp; 王小红</h4></a>
                                                 <p>
