--- a/Application/Home/View/yunzhi/Article/lists.html
+++ b/Application/Home/View/yunzhi/Article/lists.html
@@ -38,7 +38,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="thumbnail">
-                                            <a  href="#"><img alt="" src="images/wxh.jpg" width="160" height="200"></a>
+                                            <a  href="#"><img alt="" src="__IMG__/wxh.jpg" width="160" height="200"></a>
                                             <div class="caption">
                                                 <a href="#" class="btn" type="button"><h4>2015级硕士&nbsp; 王小红</h4></a>
                                                 <p>
@@ -49,7 +49,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="thumbnail">
-                                            <a  href="#"><img alt="" src="images/wxh.jpg" width="160" height="200"></a>
+                                            <a  href="#"><img alt="" src="__IMG__/wxh.jpg" width="160" height="200"></a>
                                             <div class="caption">
                                                 <a href="#" class="btn" type="button"><h4>2015级硕士&nbsp; 王小红</h4></a>
                                                 <p>
@@ -60,7 +60,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="thumbnail">
-                                            <a  href="#"><img alt="" src="images/wxh.jpg" width="160" height="200"></a>
+                                            <a  href="#"><img alt="" src="__IMG__/wxh.jpg" width="160" height="200"></a>
                                             <div class="caption">
                                                 <a href="#" class="btn" type="button"><h4>2015级硕士&nbsp; 王小红</h4></a>
                                                 <p>
@@ -73,7 +73,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="thumbnail">
-                                            <a  href="#"><img alt="" src="images/wxh.jpg" width="160" height="200"></a>
+                                            <a  href="#"><img alt="" src="__IMG__/wxh.jpg" width="160" height="200"></a>
                                             <div class="caption">
                                                 <a href="#" class="btn" type="button"><h4>2015级硕士&nbsp; 王小红</h4></a>
                                                 <p>
@@ -84,7 +84,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="thumbnail">
-                                            <a  href="#"><img alt="" src="images/wxh.jpg" width="160" height="200"></a>
+                                            <a  href="#"><img alt="" src="__IMG__/wxh.jpg" width="160" height="200"></a>
                                             <div class="caption">
                                                 <a href="#" class="btn" type="button"><h4>2015级硕士&nbsp; 王小红</h4></a>
                                                 <p>
@@ -95,7 +95,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="thumbnail">
-                                            <a  href="#"><img alt="" src="images/wxh.jpg" width="160" height="200"></a>
+                                            <a  href="#"><img alt="" src="__IMG__/wxh.jpg" width="160" height="200"></a>
                                             <div class="caption">
                                                 <a href="#" class="btn" type="button"><h4>2015级硕士&nbsp; 王小红</h4></a>
                                                 <p>
