--- a/Application/Home/View/yunzhi/Public/sliderShow.html
+++ b/Application/Home/View/yunzhi/Public/sliderShow.html
@@ -12,7 +12,7 @@
 	            </ol>
 	            <div class="carousel-inner">
 	                <div class="item  active">
-	                    <img alt="Carousel Bootstrap First" src="images/11.jpg" class="img-responsive" />
+	                    <img alt="Carousel Bootstrap First" src="__IMG__/11.jpg" class="img-responsive" />
 	                    <div class="carousel-caption">
 	                        <h4 class="text-primary">
 	                            国家973计划项目启动工作会议
@@ -23,7 +23,7 @@
 	                    </div>
 	                </div>
 	                <div class="item">
-	                    <img alt="Carousel Bootstrap Second" src="images/s-22.jpg" />
+	                    <img alt="Carousel Bootstrap Second" src="__IMG__/s-22.jpg" />
 	                    <div class="carousel-caption">
 	                        <h4 class="text-primary">
 	                            无机材料的光学活性研究新进展
@@ -34,7 +34,7 @@
 	                    </div>
 	                </div>
 	                <div class="item">
-	                    <img alt="Carousel Bootstrap Third" src="images/33.jpg" />
+	                    <img alt="Carousel Bootstrap Third" src="__IMG__/33.jpg" />
 	                    <div class="carousel-caption">
 	                        <h4 class="text-primary">
 	                            Two populations of BPs, one functionlized with β-cyclodextrin (CD-BPs) and the other with azobenzene (Azo-BPs), were prepared through a coassembly method.
