--- a/Application/Home/View/yunzhi/Article/lists.html
+++ b/Application/Home/View/yunzhi/Article/lists.html
@@ -1,4 +1,6 @@
 <extend name="Base/common"/>
+<block name="sliderShow">
+</block>
 <block name="main">
     <div class="row bg-nav bg-slider">
         <div class="col-md-12">
