--- a/Application/Home/View/yunzhi/Public/logo.html
+++ b/Application/Home/View/yunzhi/Public/logo.html
@@ -1,5 +1,5 @@
 <block name="logo">
-	<div class="row"><!--标题-->
+	<div class="row def"><!--标题-->
         <div class="col-md-12">
             <img  src="__IMG__/logo11.jpg" class="img-responsive" alt="Responsive image"/>
         </div>
