--- a/Application/Home/View/yunzhi/Public/sliderShow.html
+++ b/Application/Home/View/yunzhi/Public/sliderShow.html
@@ -1,5 +1,5 @@
 <block name="sliderShow">
-	<div class="row"><!--幻灯片-->
+	<div class="row def"><!--幻灯片-->
 	    <div class="col-md-12">
 	        <div class="carousel slide" id="carousel-819885">
 	            <ol class="carousel-indicators">
