修改自定义css

--- a/Public/YunzhiHome/css/defined.css
+++ b/Public/YunzhiHome/css/defined.css
@@ -10,6 +10,11 @@
 .li-define{
     color: #fff;
 }
+.bg-protect{
+    background: url(../images/1.jpg) center fixed;
+    background-size:contain;
+    
+}
 .def{
     margin-bottom: 10px;
 }
