--- a/Application/Home/View/yunzhi/Public/logo.html
+++ b/Application/Home/View/yunzhi/Public/logo.html
@@ -1,7 +1,7 @@
 <block name="logo">
-	<div class="row def"><!--标题-->
+	<div class="row"><!--标题-->
         <div class="col-md-12">
-            <img  src="__IMG__/logo11.jpg" class="img-responsive" alt="Responsive image"/>
+            <img  src="__IMG__/logo.jpg" class="img-responsive" alt="Responsive image"/>
         </div>
     </div>
 </block>
