--- a/Application/Home/View/yunzhi/Public/nav.html
+++ b/Application/Home/View/yunzhi/Public/nav.html
@@ -1,5 +1,5 @@
 <block name="nav">
-	<div class="row def"><!--导航-->
+	<div class="row"><!--导航-->
 		<div class="col-md-12">
 				<div class="collapse navbar-collapse nav-define" id="bs-example-navbar-collapse-1">
 					
