--- a/Application/Home/View/yunzhi/Public/sliderShow.html
+++ b/Application/Home/View/yunzhi/Public/sliderShow.html
@@ -1,4 +1,5 @@
 <block name="sliderShow">
+	<volist name="picture" id="value">
 	<div class="row def"><!--幻灯片-->
 	    <div class="col-md-12">
 	        <div class="carousel slide" id="carousel-819885">
@@ -12,34 +13,12 @@
 	            </ol>
 	            <div class="carousel-inner">
 	                <div class="item  active">
-	                    <img alt="Carousel Bootstrap First" src="__IMG__/11.jpg" class="img-responsive" />
+	                    <img alt="重点实验室" src=" __ROOT__{$value.path}" class="img-responsive" />
 	                    <div class="carousel-caption">
 	                        <h4 class="text-primary">
-	                            国家973计划项目启动工作会议
+	                        	{$value.title}
 	                        </h4>
 	                        <p>
-	                        </p>
-	                    </div>
-	                </div>
-	                <div class="item">
-	                    <img alt="Carousel Bootstrap Second" src="__IMG__/s-22.jpg" />
-	                    <div class="carousel-caption">
-	                        <h4 class="text-primary">
-	                            无机材料的光学活性研究新进展
-	                        </h4>
-	                        <p>
-
-	                        </p>
-	                    </div>
-	                </div>
-	                <div class="item">
-	                    <img alt="Carousel Bootstrap Third" src="__IMG__/33.jpg" />
-	                    <div class="carousel-caption">
-	                        <h4 class="text-primary">
-	                            Two populations of BPs, one functionlized with β-cyclodextrin (CD-BPs) and the other with azobenzene (Azo-BPs), were prepared through a coassembly method.
-	                        </h4>
-	                        <p>
-
 	                        </p>
 	                    </div>
 	                </div>
@@ -49,4 +28,5 @@
 	        </div>
 	    </div>
 	</div>
+	</volist>
 </block>
