--- a/Application/Home/View/yunzhi/Public/sliderShow.html
+++ b/Application/Home/View/yunzhi/Public/sliderShow.html
@@ -1,32 +1,31 @@
 <block name="sliderShow">
-	<volist name="picture" id="value">
 	<div class="row def"><!--幻灯片-->
 	    <div class="col-md-12">
 	        <div class="carousel slide" id="carousel-819885">
 	            <ol class="carousel-indicators">
-	                    <li class="active" data-slide-to="0" data-target="#carousel-819885">
-	                    </li>
-	                    <li data-slide-to="1" data-target="#carousel-819885">
-	                    </li>
-	                    <li data-slide-to="2" data-target="#carousel-819885">
-	                    </li>
+	            <foreach name="picture" item="vo" >
+	            	<li class="active" data-slide-to="{$vo.key}"
+	            	data-target="#carousel-819885">
+	            	</li>
+	            </foreach>
 	            </ol>
 	            <div class="carousel-inner">
-	                <div class="item  active">
-	                    <img alt="重点实验室" src=" __ROOT__{$value.path}" class="img-responsive" />
+	            <foreach name="picture" item="vo">
+	               		<div class="item <eq name="{$vo.key}" value="0">active</eq>">
+	                    <img alt="重点实验室" src=" __ROOT__{$vo.path}" class="img-responsive" />
 	                    <div class="carousel-caption">
 	                        <h4 class="text-primary">
-	                        	{$value.title}
+	                        	{$vo.title}
 	                        </h4>
 	                        <p>
 	                        </p>
 	                    </div>
-	                </div>
-	            </div>
+	                </div>	            
+	        	</foreach>
+	        	</div>
 	             <a class="left carousel-control" href="#carousel-819885" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> 
 	             <a class="right carousel-control" href="#carousel-819885" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
 	        </div>
 	    </div>
 	</div>
-	</volist>
 </block>
