--- a/Application/Home/View/yunzhi/Public/sliderShow.html
+++ b/Application/Home/View/yunzhi/Public/sliderShow.html
@@ -11,7 +11,7 @@
 	            </ol>
 	            <div class="carousel-inner">
 	            <foreach name="picture" item="vo">
-	               		<div class="item <eq name="{$vo.key}" value="0">active</eq>">
+	               		<div class="item <eq name="vo.key" value="0">active</eq>">
 	                    <img alt="重点实验室" src=" __ROOT__{$vo.path}" class="img-responsive" />
 	                    <div class="carousel-caption">
 	                        <h4 class="text-primary">
