--- a/Application/Home/View/yunzhi/Article/lists.html
+++ b/Application/Home/View/yunzhi/Article/lists.html
@@ -1,8 +1,6 @@
 <extend name="Base/common"/>
-<block name="sliderShow">
-</block>
 <block name="main">
-    <div class="row">
+    <div class="row main">
         <div class="col-md-3">
             <ul>
                 <li class="leftmenutitle">
