--- a/Application/Home/View/yunzhi/Article/index.html
+++ b/Application/Home/View/yunzhi/Article/index.html
@@ -2,7 +2,7 @@
 <block name="sliderShow">
 </block>
 <block name="main">
-    <div class="row">
+    <div class="row main">
         <div class="col-md-3">
             <ul>
                 <li class="leftmenutitle">
