更新首页index实验室简介为动态

--- a/Application/Home/View/default/Article/index.html
+++ b/Application/Home/View/default/Article/index.html
@@ -32,7 +32,9 @@
                 </div>
                 <hr/>
             </article:list>
-
+        <div class="onethink pagination pagination-right pagination-large">
+                <!-- <article:page cate="$category['id']" listrow="$category['list_row']" /> -->hello
+            </div>
         </section>
     </div>
 </block>
