--- a/Application/Home/View/default/Index/index.html
+++ b/Application/Home/View/default/Index/index.html
@@ -41,7 +41,10 @@
                 </div>
                 <hr/>
             </article:list>
-
+            <div class="onethink pagination pagination-right pagination-large">
+                <article:page cate="$category['id']" listrow="$category['list_row']" />
+            </div>
+        </section>
         </section>
     </div>
 </block>
