--- a/Application/Home/View/yunzhi/Public/nav.html
+++ b/Application/Home/View/yunzhi/Public/nav.html
@@ -2,7 +2,7 @@
 	<div class="row"><!--导航-->
 		<div class="col-md-12">
 			<div class="bs-component">
-				<nav class="navbar navbar-default">
+				<nav class="navbar navbar-default nav-define">
 					<div class="container-fluid">
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav">
