--- a/Application/Home/View/yunzhi/Index/index.html
+++ b/Application/Home/View/yunzhi/Index/index.html
@@ -1,7 +1,7 @@
 <extend name="Base/common"/>
 <block name="main">
 {:W('Picture/getPictureUrl', array(69))}
-	<div class="row">
+	<div class="row main">
 		<div class="col-md-12">
 			<div class="row list-define">
                 <div class="col-md-8">
