--- a/Public/YunzhiHome/css/defined.css
+++ b/Public/YunzhiHome/css/defined.css
@@ -1,5 +1,6 @@
 .nav-define{
-    margin-bottom: 0px;
+    background-color: #0160aa;
+    color: white;
     
 }
 .active-define{
@@ -77,4 +78,11 @@
 }
 .main{
     margin-top: 30px;
+}
+.resume-article{
+    text-align: center;
+    color:#838383;
+    line-height: 20px;
+    font-size: 12px;
+    font-family: "微软雅黑";
 }
