--- a/Application/Home/View/yunzhi/Article/index.html
+++ b/Application/Home/View/yunzhi/Article/index.html
@@ -4,17 +4,7 @@
 <block name="main">
     <div class="row main">
         <div class="col-md-3">
-            <ul>
-                <li class="leftmenutitle">
-                    <a href="#" class="a">综合新闻</a>
-                </li>
-                <li class="leftmenutitle">
-                    <a href="#" class="a">通知公告</a>
-                </li>
-                <li class="leftmenutitle">
-                    <a href="#" class="a">学术活动·研究进展</a>
-                </li>
-            </ul>
+            {:W('Category/lists', array($category['id'], ACTION_NAME == 'index'))}
         </div>
         <div class="col-md-9">
             <div class="panel panel-default">
