--- a/Application/Home/View/yunzhi/Article/picLists.html
+++ b/Application/Home/View/yunzhi/Article/picLists.html
@@ -2,17 +2,7 @@
 <block name="main">
     <div class="row main">
         <div class="col-md-3">
-            <ul>
-                <li class="leftmenutitle">
-                    <a href="#" class="a">研究方向1：成员简介</a>
-                </li>
-                <li class="leftmenutitle">
-                    <a href="#" class="a">研究方向2：成员简介</a>
-                </li>
-                <li class="leftmenutitle">
-                    <a href="#" class="a">研究方向3：成员简介</a>
-                </li>
-            </ul>
+            {:W('Category/lists', array($category['id'], ACTION_NAME == 'index'))}
         </div>
         <div class="col-md-9">
             <div class="panel panel-default">
