--- a/Application/Home/View/yunzhi/Article/index.html
+++ b/Application/Home/View/yunzhi/Article/index.html
@@ -4,7 +4,7 @@
 <block name="main">
     <div class="row main">
         <div class="col-md-3">
-            {:W('Category/lists', array($category['id'], ACTION_NAME == 'index'))}
+            {:W('Category/lists', array($category['id'],1))}
         </div>
         <div class="col-md-9">
             <div class="panel panel-default">
