修改新闻通知

--- a/Application/Home/View/yunzhi/Article/index.html
+++ b/Application/Home/View/yunzhi/Article/index.html
@@ -12,28 +12,11 @@
                 </div>
                 <div class="panel-body">
                     <ul>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
-                        <li class="textlist1" style="list-style-type:none;">
-                            <a href="#">2010年度批准金属基复合材料国家重点实验室开放课题</a>
+                        <article:list name="article" category="42" child="true">
+                            <li class="textlist1" style="list-style-type:none;">
+                            <a href="{:U('Article/detail?id='.$article['id'])}">{$article.title}</a>
+                        </li>
+                        </article:list>
                     </ul>
                 </div>
                 <div class="panel-footer">
