--- a/Application/Home/View/yunzhi/Public/leftnav.html
+++ b/Application/Home/View/yunzhi/Public/leftnav.html
@@ -1,15 +1,17 @@
+<ul>
 <volist name="category" id="cate">
     <eq name="current" value="$cate['id']">
-        <li class="active">
-            <a href="{:U('Article/lists?category='.$cate['name'])}">
+        <li class="leftmenutitle active">
+            <a class="a" href="{:U('Article/lists?category='.$cate['name'])}">
                 <i class="icon-chevron-right"></i>{$cate.title}
             </a>
         </li>
     <else/>
-        <li>
-            <a href="{:U('Article/lists?category='.$cate['name'])}">
+        <li class="leftmenutitle">
+            <a class="a" href="{:U('Article/lists?category='.$cate['name'])}">
                 <i class="icon-chevron-right"></i>{$cate.title}
             </a>
         </li>
     </eq>
 </volist>
+</ul>
