--- a/Application/Home/View/yunzhi/Index/index.html
+++ b/Application/Home/View/yunzhi/Index/index.html
@@ -1,42 +1,26 @@
 <extend name="Base/common"/>
 <block name="main">
-{:W('Picture/getPictureUrl', array(69))}
-	<div class="row main">
-		<div class="col-md-12">
-			<div class="row list-define">
+    {:W('Picture/getPictureUrl', array(69))}
+    <div class="row main">
+        <div class="col-md-12">
+            <div class="row list-define">
                 <div class="col-md-8">
                     {:W('Info/getInfoArticle', array(2))}
                 </div>
-                        
+
                 <div class="col-md-4">
                     <div class="list-group">
                         <a class="list-group-item active">新闻通知</a>
                         <div class="bg-list">
-                            <div class="list-group-item">
-                                <a href="#">通知公告通知公告通知公告</a><span class="badge pull-right">2015.08.01</span>
-                            </div>
-                            <div class="list-group-item">
-                                <a href="#">通知公告通知公告通知公告</a><span class="badge pull-right">2015.08.01</span>
-                            </div>
-                            <div class="list-group-item">
-                                <a href="#">通知公告通知公告通知公告</a><span class="badge pull-right">2015.08.01</span>
-                            </div>
-                            <div class="list-group-item">
-                                <a href="#">通知公告通知公告通知公告</a><span class="badge pull-right">2015.08.01</span>
-                            </div>
-                            <div class="list-group-item">
-                                <a href="#">通知公告通知公告通知公告</a><span class="badge pull-right">2015.08.01</span>
-                            </div>
-                            <div class="list-group-item">
-                                <a href="#">通知公告通知公告通知公告</a><span class="badge pull-right">2015.08.01</span>
-                            </div>
-                            <div class="list-group-item">
-                                <a href="#">通知公告通知公告通知公告</a><span class="badge pull-right">2015.08.01</span>
-                            </div>
+                            <article:list name="article" category="42" child="true">
+                                <div class="list-group-item">
+                                    <a href="{:U('Article/detail?id='.$article['id'])}">{$article.title}</a><span class="badge pull-right">{$article.create_time|date='Y-m-d H:i',###}</span>
+                                </div>
+                            </article:list>
                         </div>
                     </div>
                 </div>
             </div>
-		</div>
-	</div>
+        </div>
+    </div>
 </block>
