--- a/Application/Home/View/yunzhi/Article/article/detail.html
+++ b/Application/Home/View/yunzhi/Article/article/detail.html
@@ -3,7 +3,7 @@
     <div class="row main">
         <div class="col-md-3">
             <ul>
-                            {:W('Category/lists', array($category['id'], ACTION_NAME == 'index'))}
+                            {:W('Category/lists', array($category['id'],1))}
             </ul>
         </div>
         <div class="col-md-9">
