--- a/Application/Home/View/yunzhi/Index/index.html
+++ b/Application/Home/View/yunzhi/Index/index.html
@@ -14,7 +14,7 @@
                         <div class="bg-list">
                             <article:list name="article" category="42" child="true">
                                 <div class="list-group-item">
-                                    <a href="{:U('Article/detail?id='.$article['id'])}">{$article.title}</a><span class="badge pull-right">{$article.create_time|date='Y-m-d H:i',###}</span>
+                                    <a href="{:U('Article/detail?id='.$article['id'])}">{$article.title}</a><span class="badge pull-right">{$article.create_time|date='Y-m-d',###}</span>
                                 </div>
                             </article:list>
                         </div>
