修改内容详情日期显示不正确

--- a/Application/Home/View/yunzhi/Article/article/detail.html
+++ b/Application/Home/View/yunzhi/Article/article/detail.html
@@ -14,7 +14,7 @@
                     <div class="list-group-item">
                         <h2 class="text-center">{$info.title}</h2>
                         <p class="resume-article">
-                            <span class="glyphicon glyphicon-time" aria-hidden="true"></span>发布日期：{$info.create_time}<!--                           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>作者：-->&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>点击数：{$info.view}
+                            <span class="glyphicon glyphicon-time" aria-hidden="true"></span>发布日期：{$info.create_time|date='Y-m-d',###}<!--                           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>作者：-->&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>点击数：{$info.view}
                         </p>
                     </div>
                     <div class="list-group-item">
