--- a/Application/Home/View/yunzhi/Article/article/detail.html
+++ b/Application/Home/View/yunzhi/Article/article/detail.html
@@ -20,10 +20,9 @@
                     <div class="list-group-item">
                         <h4 class="list-group-item-heading">
 
-                        </h4>
-                        <p class="list-group-item-text">
+                        </h4>                      
                             {$info.content}
-                        </p>
+                        <div style="clear:both"></div>
                     </div>
                 </div>
             </div>
