--- a/Application/Home/View/yunzhi/Article/index.html
+++ b/Application/Home/View/yunzhi/Article/index.html
@@ -14,7 +14,7 @@
                     <ul>
                         <article:list name="article" category="42" child="true">
                             <li class="textlist1" style="list-style-type:none;">
-                            <a href="{:U('Article/detail?id='.$article['id'])}">{$article.title}</a>
+                            <a href="{:U('Article/detail?id='.$article['id'])}">{$article.title}</a><span class="badge pull-right">{$article.create_time|date='Y-m-d',###}</span>
                         </li>
                         </article:list>
                     </ul>
