--- a/Application/Home/View/yunzhi/Article/index.html
+++ b/Application/Home/View/yunzhi/Article/index.html
@@ -22,29 +22,9 @@
                 <div class="panel-footer">
                     <div class="row">
                         <div class="col-md-12">
-                            <ul class="pagination pull-right">
-                                <li>
-                                    <a href="#">上一页</a>
-                                </li>
-                                <li>
-                                    <a href="#">1</a>
-                                </li>
-                                <li>
-                                    <a href="#">2</a>
-                                </li>
-                                <li>
-                                    <a href="#">3</a>
-                                </li>
-                                <li>
-                                    <a href="#">4</a>
-                                </li>
-                                <li>
-                                    <a href="#">5</a>
-                                </li>
-                                <li>
-                                    <a href="#">下一页</a>
-                                </li>
-                            </ul>
+                            <div class="page">
+                                    {$_page}
+                            </div>
                         </div>
                     </div>
 
