修改分页样式

--- a/Application/Home/View/yunzhi/Article/index.html
+++ b/Application/Home/View/yunzhi/Article/index.html
@@ -22,8 +22,8 @@
                 <div class="panel-footer">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="page">
-                                    {$_page}
+                            <div class="page pull-right">
+                                {$_page}
                             </div>
                         </div>
                     </div>
