--- a/Application/Home/View/yunzhi/Article/index.html
+++ b/Application/Home/View/yunzhi/Article/index.html
@@ -22,7 +22,7 @@
                 <div class="panel-footer">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="page">
+                            <div class="page pull-right">
                                     {$_page}
                             </div>
                         </div>
