--- a/Application/Home/View/yunzhi/Public/leftnav.html
+++ b/Application/Home/View/yunzhi/Public/leftnav.html
@@ -2,13 +2,13 @@
 <volist name="category" id="cate">
     <eq name="current" value="$cate['id']">
         <li class="leftmenutitle active">
-            <a class="a" href="{:U('Article/lists?category='.$cate['name'])}">
+            <a class="a" href="{:U('Article/index?category='.$cate['id'])}">
                 <i class="icon-chevron-right"></i>{$cate.title}
             </a>
         </li>
     <else/>
         <li class="leftmenutitle">
-            <a class="a" href="{:U('Article/lists?category='.$cate['name'])}">
+            <a class="a" href="{:U('Article/index?category='.$cate['id'])}">
                 <i class="icon-chevron-right"></i>{$cate.title}
             </a>
         </li>
