隐藏“幻灯片轮播”分类，修改链接显示字数，修改“...”

--- a/Application/Home/View/yunzhi/Article/lists.html
+++ b/Application/Home/View/yunzhi/Article/lists.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="row">
-                        <article:list name="value" category="$_GET['category']" child="true">
+                        <article:list name="value" row="6" category="$_GET['category']" child="true">
                         <div class="col-md-4">
                             <div class="thumbnail">
                                 <a  href="{:U('Article/detail?id='.$value['id'])}"><img alt="" src="__ROOT__/{:W('Picture/getPictureUrlById',array($value['cover_id']))}"></a>
